<?xml version="1.0"?>
<package>
  <name>fetch_depth_layer</name>
  <version>0.7.12</version>
  <description>The fetch_depth_layer package</description>

  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
