<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>fetch_ikfast_plugin</name>
  <version>0.7.12</version>
  <description>
    Kinematics plugin for Fetch robot, generated through IKFast
  </description>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/fetch_arm_moveit_ikfast_plugin_description.xml"/>
  </export>

</package>
