<package>
  <name>fetch_navigation</name>
  <version>0.7.12</version>
  <description>Configuration and launch files for running ROS navigation on Fetch.</description>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <author>Michael Ferguson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>fetch_depth_layer</run_depend>
  <run_depend>fetch_maps</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>rotate_recovery</run_depend>
  <run_depend>slam_karto</run_depend>
  <run_depend>voxel_grid</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
